--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
   },
   "homepage": "https://github.com/kar-moore/taskgame#readme",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "body-parser"    : "^1.4.3",
+    "method-override": "^2.1.3",
+    "mongoose"       : "^4.4.12",
+    "mongoose-validators": "^0.1.0",
+    "morgan"         : "^1.1.1"
   }
 }
